// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._1g896xf10,html._1g896xf10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="k60cqs0 i0m83318 i0m8331b">
+        <div class="tzfceu0 _1g896xf8n _1g896xf7j _1g896xfav _1g896xf9r _1g896xf5f _1g896xf67 _1g896xfi7 _1g896xf4j _1g896xf4c i0m83318 i0m8331b _1g896xf33 _1g896xf36">
+          <span class="tzfceu0 _1g896xf4z i0m8330 i0m8331 i0m83321 mowtpn4 i0m833d">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .tzfceu0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] .tzfceu0 {
  outline: none;
}
.tzfceu1 {
  display: block;
}
.tzfceu2 {
  line-height: 1;
}
.tzfceu3 {
  list-style: none;
}
.tzfceu4 {
  quotes: none;
}
.tzfceu4:after,
.tzfceu4:before {
  content: "";
}
.tzfceu5 {
  border-collapse: collapse;
  border-spacing: 0;
}
.tzfceu6 {
  -webkit-appearance: none;
  appearance: none;
}
.tzfceu7 {
  background-color: transparent;
}
.tzfceu9 {
  color: inherit;
}
.tzfceua:disabled {
  opacity: 1;
}
.tzfceua::-ms-expand {
  display: none;
}
.tzfceuc[type="number"] {
  -moz-appearance: textfield;
}
.tzfceuc[type="number"]::-webkit-inner-spin-button,
.tzfceuc[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.tzfceuc::-ms-clear {
  display: none;
}
.tzfceuc::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.tzfceuf {
  color: inherit;
  text-decoration: none;
}
._1g896xf0 {
  overflow: hidden;
}
._1g896xf1 {
  overflow: scroll;
}
._1g896xf2 {
  overflow: visible;
}
._1g896xf3 {
  overflow: auto;
}
._1g896xf4 {
  -webkit-user-select: none;
  user-select: none;
}
._1g896xf5 {
  outline: none;
}
._1g896xf6 {
  opacity: 0;
}
._1g896xf7 {
  z-index: 0;
}
._1g896xf8 {
  z-index: 1;
}
._1g896xf9 {
  z-index: 2;
}
._1g896xfa {
  z-index: 90;
}
._1g896xfb {
  z-index: 100;
}
._1g896xfc {
  z-index: 200;
}
._1g896xfd {
  z-index: 290;
}
._1g896xfe {
  z-index: 300;
}
._1g896xff {
  z-index: 400;
}
._1g896xfg {
  cursor: default;
}
._1g896xfh {
  cursor: pointer;
}
._1g896xfi {
  pointer-events: none;
}
._1g896xfj {
  top: 0;
}
._1g896xfk {
  bottom: 0;
}
._1g896xfl {
  left: 0;
}
._1g896xfm {
  right: 0;
}
._1g896xfn {
  height: 100%;
}
._1g896xfo {
  height: var(--_1q18b4k9);
}
._1g896xfp {
  width: 100%;
}
._1g896xfq {
  width: var(--_1q18b4k9);
}
._1g896xfr {
  min-width: 0;
}
._1g896xfs {
  max-width: var(--_1q18b4k11);
}
._1g896xft {
  max-width: var(--_1q18b4k12);
}
._1g896xfu {
  max-width: var(--_1q18b4k13);
}
._1g896xfv {
  max-width: var(--_1q18b4k14);
}
._1g896xfw {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
._1g896xfx {
  transition: var(--_1q18b4k5i);
}
._1g896xfy {
  transition: var(--_1q18b4k5j);
}
._1g896xfz:active {
  transform: var(--_1q18b4k5k);
}
html._1g896xf10 ._1g896xf12,
html:not(._1g896xf10) ._1g896xf11 {
  background: var(--_1q18b4k1t);
}
html._1g896xf10 ._1g896xf14,
html:not(._1g896xf10) ._1g896xf13 {
  background: var(--_1q18b4k1u);
}
html._1g896xf10 ._1g896xf16,
html:not(._1g896xf10) ._1g896xf15 {
  background: var(--_1q18b4k1v);
}
html._1g896xf10 ._1g896xf18,
html:not(._1g896xf10) ._1g896xf17 {
  background: var(--_1q18b4k1w);
}
html._1g896xf10 ._1g896xf1a,
html:not(._1g896xf10) ._1g896xf19 {
  background: var(--_1q18b4k1x);
}
html._1g896xf10 ._1g896xf1c,
html:not(._1g896xf10) ._1g896xf1b {
  background: var(--_1q18b4k1y);
}
html._1g896xf10 ._1g896xf1e,
html:not(._1g896xf10) ._1g896xf1d {
  background: var(--_1q18b4k1z);
}
html._1g896xf10 ._1g896xf1g,
html:not(._1g896xf10) ._1g896xf1f {
  background: var(--_1q18b4k20);
}
html._1g896xf10 ._1g896xf1i,
html:not(._1g896xf10) ._1g896xf1h {
  background: var(--_1q18b4k21);
}
html._1g896xf10 ._1g896xf1k,
html:not(._1g896xf10) ._1g896xf1j {
  background: var(--_1q18b4k22);
}
html._1g896xf10 ._1g896xf1m,
html:not(._1g896xf10) ._1g896xf1l {
  background: var(--_1q18b4k23);
}
html._1g896xf10 ._1g896xf1o,
html:not(._1g896xf10) ._1g896xf1n {
  background: var(--_1q18b4k24);
}
html._1g896xf10 ._1g896xf1q,
html:not(._1g896xf10) ._1g896xf1p {
  background: var(--_1q18b4k25);
}
html._1g896xf10 ._1g896xf1s,
html:not(._1g896xf10) ._1g896xf1r {
  background: var(--_1q18b4k26);
}
html._1g896xf10 ._1g896xf1u,
html:not(._1g896xf10) ._1g896xf1t {
  background: var(--_1q18b4k27);
}
html._1g896xf10 ._1g896xf1w,
html:not(._1g896xf10) ._1g896xf1v {
  background: var(--_1q18b4k28);
}
html._1g896xf10 ._1g896xf1y,
html:not(._1g896xf10) ._1g896xf1x {
  background: var(--_1q18b4k29);
}
html._1g896xf10 ._1g896xf20,
html:not(._1g896xf10) ._1g896xf1z {
  background: var(--_1q18b4k2a);
}
html._1g896xf10 ._1g896xf22,
html:not(._1g896xf10) ._1g896xf21 {
  background: var(--_1q18b4k2b);
}
html._1g896xf10 ._1g896xf24,
html:not(._1g896xf10) ._1g896xf23 {
  background: var(--_1q18b4k2c);
}
html._1g896xf10 ._1g896xf26,
html:not(._1g896xf10) ._1g896xf25 {
  background: var(--_1q18b4k2d);
}
html._1g896xf10 ._1g896xf28,
html:not(._1g896xf10) ._1g896xf27 {
  background: var(--_1q18b4k2e);
}
html._1g896xf10 ._1g896xf2a,
html:not(._1g896xf10) ._1g896xf29 {
  background: var(--_1q18b4k2f);
}
html._1g896xf10 ._1g896xf2c,
html:not(._1g896xf10) ._1g896xf2b {
  background: var(--_1q18b4k2g);
}
html._1g896xf10 ._1g896xf2e,
html:not(._1g896xf10) ._1g896xf2d {
  background: var(--_1q18b4k2h);
}
html._1g896xf10 ._1g896xf2g,
html:not(._1g896xf10) ._1g896xf2f {
  background: var(--_1q18b4k2i);
}
html._1g896xf10 ._1g896xf2i,
html:not(._1g896xf10) ._1g896xf2h {
  background: var(--_1q18b4k2j);
}
html._1g896xf10 ._1g896xf2k,
html:not(._1g896xf10) ._1g896xf2j {
  background: var(--_1q18b4k2k);
}
html._1g896xf10 ._1g896xf2m,
html:not(._1g896xf10) ._1g896xf2l {
  background: var(--_1q18b4k2l);
}
html._1g896xf10 ._1g896xf2o,
html:not(._1g896xf10) ._1g896xf2n {
  background: var(--_1q18b4k2m);
}
html._1g896xf10 ._1g896xf2q,
html:not(._1g896xf10) ._1g896xf2p {
  background: var(--_1q18b4k2n);
}
html._1g896xf10 ._1g896xf2s,
html:not(._1g896xf10) ._1g896xf2r {
  background: var(--_1q18b4k2o);
}
html._1g896xf10 ._1g896xf2u,
html:not(._1g896xf10) ._1g896xf2t {
  background: var(--_1q18b4k2p);
}
html._1g896xf10 ._1g896xf2w,
html:not(._1g896xf10) ._1g896xf2v {
  background: var(--_1q18b4k2q);
}
html._1g896xf10 ._1g896xf2y,
html:not(._1g896xf10) ._1g896xf2x {
  background: var(--_1q18b4k2r);
}
html._1g896xf10 ._1g896xf30,
html:not(._1g896xf10) ._1g896xf2z {
  background: var(--_1q18b4k2s);
}
html._1g896xf10 ._1g896xf32,
html:not(._1g896xf10) ._1g896xf31 {
  background: var(--_1q18b4k2t);
}
html._1g896xf10 ._1g896xf34,
html:not(._1g896xf10) ._1g896xf33 {
  background: var(--_1q18b4k2u);
}
html._1g896xf10 ._1g896xf36,
html:not(._1g896xf10) ._1g896xf35 {
  background: var(--_1q18b4k2v);
}
html._1g896xf10 ._1g896xf38,
html:not(._1g896xf10) ._1g896xf37 {
  box-shadow: var(--_1q18b4k5l);
}
html._1g896xf10 ._1g896xf3a,
html:not(._1g896xf10) ._1g896xf39 {
  box-shadow: var(--_1q18b4k5m);
}
html._1g896xf10 ._1g896xf3c,
html:not(._1g896xf10) ._1g896xf3b {
  box-shadow: var(--_1q18b4k5n);
}
html._1g896xf10 ._1g896xf3e,
html:not(._1g896xf10) ._1g896xf3d {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4kf);
}
html._1g896xf10 ._1g896xf3g,
html:not(._1g896xf10) ._1g896xf3f {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4kg);
}
html._1g896xf10 ._1g896xf3i,
html:not(._1g896xf10) ._1g896xf3h {
  box-shadow: inset 0 0 0 var(--_1q18b4kz) var(--_1q18b4kf);
}
html._1g896xf10 ._1g896xf3k,
html:not(._1g896xf10) ._1g896xf3j {
  box-shadow: inset 0 0 0 var(--_1q18b4kz) var(--_1q18b4kg);
}
html._1g896xf10 ._1g896xf3m,
html:not(._1g896xf10) ._1g896xf3l {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4kh);
}
html._1g896xf10 ._1g896xf3o,
html:not(._1g896xf10) ._1g896xf3n {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4ki);
}
html._1g896xf10 ._1g896xf3q,
html:not(._1g896xf10) ._1g896xf3p {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4kj);
}
html._1g896xf10 ._1g896xf3s,
html:not(._1g896xf10) ._1g896xf3r {
  box-shadow: inset 0 0 0 var(--_1q18b4kz) var(--_1q18b4kj);
}
html._1g896xf10 ._1g896xf3u,
html:not(._1g896xf10) ._1g896xf3t {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4kk);
}
html._1g896xf10 ._1g896xf3w,
html:not(._1g896xf10) ._1g896xf3v {
  box-shadow: inset 0 0 0 var(--_1q18b4kz) var(--_1q18b4kk);
}
html._1g896xf10 ._1g896xf3y,
html:not(._1g896xf10) ._1g896xf3x {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4kl);
}
html._1g896xf10 ._1g896xf40,
html:not(._1g896xf10) ._1g896xf3z {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4kn);
}
html._1g896xf10 ._1g896xf42,
html:not(._1g896xf10) ._1g896xf41 {
  box-shadow: inset 0 0 0 var(--_1q18b4kz) var(--_1q18b4kn);
}
html._1g896xf10 ._1g896xf44,
html:not(._1g896xf10) ._1g896xf43 {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4ko);
}
html._1g896xf10 ._1g896xf46,
html:not(._1g896xf10) ._1g896xf45 {
  box-shadow: inset 0 0 0 var(--_1q18b4kz) var(--_1q18b4ko);
}
html._1g896xf10 ._1g896xf48,
html:not(._1g896xf10) ._1g896xf47 {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4kp);
}
html._1g896xf10 ._1g896xf4a,
html:not(._1g896xf10) ._1g896xf49 {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4kq);
}
html._1g896xf10 ._1g896xf4c,
html:not(._1g896xf10) ._1g896xf4b {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4kr);
}
html._1g896xf10 ._1g896xf4e,
html:not(._1g896xf10) ._1g896xf4d {
  box-shadow: inset 0 0 0 var(--_1q18b4kz) var(--_1q18b4kr);
}
html._1g896xf10 ._1g896xf4g,
html:not(._1g896xf10) ._1g896xf4f {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4ks);
}
html._1g896xf10 ._1g896xf4i,
html:not(._1g896xf10) ._1g896xf4h {
  box-shadow: inset 0 0 0 var(--_1q18b4kz) var(--_1q18b4ks);
}
html._1g896xf10 ._1g896xf4k,
html:not(._1g896xf10) ._1g896xf4j {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4kt);
}
html._1g896xf10 ._1g896xf4m,
html:not(._1g896xf10) ._1g896xf4l {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4ku);
}
html._1g896xf10 ._1g896xf4o,
html:not(._1g896xf10) ._1g896xf4n {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4kv);
}
html._1g896xf10 ._1g896xf4q,
html:not(._1g896xf10) ._1g896xf4p {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4kw);
}
html._1g896xf10 ._1g896xf4s,
html:not(._1g896xf10) ._1g896xf4r {
  box-shadow: inset 0 0 0 var(--_1q18b4ky) var(--_1q18b4kx);
}
html._1g896xf10 ._1g896xf4u,
html:not(._1g896xf10) ._1g896xf4t {
  box-shadow: 0 0 0 var(--_1q18b4k10) var(--_1q18b4km);
}
._1g896xf4v {
  display: none;
}
._1g896xf4z {
  display: block;
}
._1g896xf53 {
  display: inline;
}
._1g896xf57 {
  display: inline-block;
}
._1g896xf5b {
  display: flex;
}
._1g896xf5f {
  position: relative;
}
._1g896xf5j {
  position: absolute;
}
._1g896xf5n {
  position: fixed;
}
._1g896xf5r {
  border-radius: 0;
}
._1g896xf5v {
  border-radius: 9999px;
}
._1g896xf5z {
  border-radius: var(--_1q18b4kb);
}
._1g896xf63 {
  border-radius: var(--_1q18b4kc);
}
._1g896xf67 {
  border-radius: var(--_1q18b4kd);
}
._1g896xf6b {
  border-radius: var(--_1q18b4ke);
}
._1g896xf6f {
  gap: var(--_1q18b4k0);
}
._1g896xf6j {
  gap: var(--_1q18b4k1);
}
._1g896xf6n {
  gap: var(--_1q18b4k2);
}
._1g896xf6r {
  gap: var(--_1q18b4k3);
}
._1g896xf6v {
  gap: var(--_1q18b4k4);
}
._1g896xf6z {
  gap: var(--_1q18b4k5);
}
._1g896xf73 {
  gap: var(--_1q18b4k6);
}
._1g896xf77 {
  gap: var(--_1q18b4k7);
}
._1g896xf7b {
  gap: var(--_1q18b4k8);
}
._1g896xf7f {
  gap: 0;
}
._1g896xf7j {
  padding-top: var(--_1q18b4k0);
}
._1g896xf7n {
  padding-top: var(--_1q18b4k1);
}
._1g896xf7r {
  padding-top: var(--_1q18b4k2);
}
._1g896xf7v {
  padding-top: var(--_1q18b4k3);
}
._1g896xf7z {
  padding-top: var(--_1q18b4k4);
}
._1g896xf83 {
  padding-top: var(--_1q18b4k5);
}
._1g896xf87 {
  padding-top: var(--_1q18b4k6);
}
._1g896xf8b {
  padding-top: var(--_1q18b4k7);
}
._1g896xf8f {
  padding-top: var(--_1q18b4k8);
}
._1g896xf8j {
  padding-top: 0;
}
._1g896xf8n {
  padding-bottom: var(--_1q18b4k0);
}
._1g896xf8r {
  padding-bottom: var(--_1q18b4k1);
}
._1g896xf8v {
  padding-bottom: var(--_1q18b4k2);
}
._1g896xf8z {
  padding-bottom: var(--_1q18b4k3);
}
._1g896xf93 {
  padding-bottom: var(--_1q18b4k4);
}
._1g896xf97 {
  padding-bottom: var(--_1q18b4k5);
}
._1g896xf9b {
  padding-bottom: var(--_1q18b4k6);
}
._1g896xf9f {
  padding-bottom: var(--_1q18b4k7);
}
._1g896xf9j {
  padding-bottom: var(--_1q18b4k8);
}
._1g896xf9n {
  padding-bottom: 0;
}
._1g896xf9r {
  padding-right: var(--_1q18b4k0);
}
._1g896xf9v {
  padding-right: var(--_1q18b4k1);
}
._1g896xf9z {
  padding-right: var(--_1q18b4k2);
}
._1g896xfa3 {
  padding-right: var(--_1q18b4k3);
}
._1g896xfa7 {
  padding-right: var(--_1q18b4k4);
}
._1g896xfab {
  padding-right: var(--_1q18b4k5);
}
._1g896xfaf {
  padding-right: var(--_1q18b4k6);
}
._1g896xfaj {
  padding-right: var(--_1q18b4k7);
}
._1g896xfan {
  padding-right: var(--_1q18b4k8);
}
._1g896xfar {
  padding-right: 0;
}
._1g896xfav {
  padding-left: var(--_1q18b4k0);
}
._1g896xfaz {
  padding-left: var(--_1q18b4k1);
}
._1g896xfb3 {
  padding-left: var(--_1q18b4k2);
}
._1g896xfb7 {
  padding-left: var(--_1q18b4k3);
}
._1g896xfbb {
  padding-left: var(--_1q18b4k4);
}
._1g896xfbf {
  padding-left: var(--_1q18b4k5);
}
._1g896xfbj {
  padding-left: var(--_1q18b4k6);
}
._1g896xfbn {
  padding-left: var(--_1q18b4k7);
}
._1g896xfbr {
  padding-left: var(--_1q18b4k8);
}
._1g896xfbv {
  padding-left: 0;
}
._1g896xfbz {
  margin-top: var(--_1q18b4k0);
}
._1g896xfc3 {
  margin-top: var(--_1q18b4k1);
}
._1g896xfc7 {
  margin-top: var(--_1q18b4k2);
}
._1g896xfcb {
  margin-top: var(--_1q18b4k3);
}
._1g896xfcf {
  margin-top: var(--_1q18b4k4);
}
._1g896xfcj {
  margin-top: var(--_1q18b4k5);
}
._1g896xfcn {
  margin-top: var(--_1q18b4k6);
}
._1g896xfcr {
  margin-top: var(--_1q18b4k7);
}
._1g896xfcv {
  margin-top: var(--_1q18b4k8);
}
._1g896xfcz {
  margin-top: 0;
}
._1g896xfd3 {
  margin-bottom: var(--_1q18b4k0);
}
._1g896xfd7 {
  margin-bottom: var(--_1q18b4k1);
}
._1g896xfdb {
  margin-bottom: var(--_1q18b4k2);
}
._1g896xfdf {
  margin-bottom: var(--_1q18b4k3);
}
._1g896xfdj {
  margin-bottom: var(--_1q18b4k4);
}
._1g896xfdn {
  margin-bottom: var(--_1q18b4k5);
}
._1g896xfdr {
  margin-bottom: var(--_1q18b4k6);
}
._1g896xfdv {
  margin-bottom: var(--_1q18b4k7);
}
._1g896xfdz {
  margin-bottom: var(--_1q18b4k8);
}
._1g896xfe3 {
  margin-bottom: 0;
}
._1g896xfe7 {
  margin-right: var(--_1q18b4k0);
}
._1g896xfeb {
  margin-right: var(--_1q18b4k1);
}
._1g896xfef {
  margin-right: var(--_1q18b4k2);
}
._1g896xfej {
  margin-right: var(--_1q18b4k3);
}
._1g896xfen {
  margin-right: var(--_1q18b4k4);
}
._1g896xfer {
  margin-right: var(--_1q18b4k5);
}
._1g896xfev {
  margin-right: var(--_1q18b4k6);
}
._1g896xfez {
  margin-right: var(--_1q18b4k7);
}
._1g896xff3 {
  margin-right: var(--_1q18b4k8);
}
._1g896xff7 {
  margin-right: 0;
}
._1g896xffb {
  margin-left: var(--_1q18b4k0);
}
._1g896xfff {
  margin-left: var(--_1q18b4k1);
}
._1g896xffj {
  margin-left: var(--_1q18b4k2);
}
._1g896xffn {
  margin-left: var(--_1q18b4k3);
}
._1g896xffr {
  margin-left: var(--_1q18b4k4);
}
._1g896xffv {
  margin-left: var(--_1q18b4k5);
}
._1g896xffz {
  margin-left: var(--_1q18b4k6);
}
._1g896xfg3 {
  margin-left: var(--_1q18b4k7);
}
._1g896xfg7 {
  margin-left: var(--_1q18b4k8);
}
._1g896xfgb {
  margin-left: 0;
}
._1g896xfgf {
  align-items: flex-start;
}
._1g896xfgj {
  align-items: center;
}
._1g896xfgn {
  align-items: flex-end;
}
._1g896xfgr {
  justify-content: flex-start;
}
._1g896xfgv {
  justify-content: center;
}
._1g896xfgz {
  justify-content: flex-end;
}
._1g896xfh3 {
  justify-content: space-between;
}
._1g896xfh7 {
  flex-direction: row;
}
._1g896xfhb {
  flex-direction: row-reverse;
}
._1g896xfhf {
  flex-direction: column;
}
._1g896xfhj {
  flex-direction: column-reverse;
}
._1g896xfhn {
  flex-wrap: wrap;
}
._1g896xfhr {
  flex-wrap: nowrap;
}
._1g896xfhv {
  flex-shrink: 0;
}
._1g896xfhz {
  flex-grow: 0;
}
._1g896xfi3 {
  flex-grow: 1;
}
._1g896xfi7 {
  text-align: left;
}
._1g896xfib {
  text-align: center;
}
._1g896xfif {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._1g896xf4w {
    display: none;
  }
  ._1g896xf50 {
    display: block;
  }
  ._1g896xf54 {
    display: inline;
  }
  ._1g896xf58 {
    display: inline-block;
  }
  ._1g896xf5c {
    display: flex;
  }
  ._1g896xf5g {
    position: relative;
  }
  ._1g896xf5k {
    position: absolute;
  }
  ._1g896xf5o {
    position: fixed;
  }
  ._1g896xf5s {
    border-radius: 0;
  }
  ._1g896xf5w {
    border-radius: 9999px;
  }
  ._1g896xf60 {
    border-radius: var(--_1q18b4kb);
  }
  ._1g896xf64 {
    border-radius: var(--_1q18b4kc);
  }
  ._1g896xf68 {
    border-radius: var(--_1q18b4kd);
  }
  ._1g896xf6c {
    border-radius: var(--_1q18b4ke);
  }
  ._1g896xf6g {
    gap: var(--_1q18b4k0);
  }
  ._1g896xf6k {
    gap: var(--_1q18b4k1);
  }
  ._1g896xf6o {
    gap: var(--_1q18b4k2);
  }
  ._1g896xf6s {
    gap: var(--_1q18b4k3);
  }
  ._1g896xf6w {
    gap: var(--_1q18b4k4);
  }
  ._1g896xf70 {
    gap: var(--_1q18b4k5);
  }
  ._1g896xf74 {
    gap: var(--_1q18b4k6);
  }
  ._1g896xf78 {
    gap: var(--_1q18b4k7);
  }
  ._1g896xf7c {
    gap: var(--_1q18b4k8);
  }
  ._1g896xf7g {
    gap: 0;
  }
  ._1g896xf7k {
    padding-top: var(--_1q18b4k0);
  }
  ._1g896xf7o {
    padding-top: var(--_1q18b4k1);
  }
  ._1g896xf7s {
    padding-top: var(--_1q18b4k2);
  }
  ._1g896xf7w {
    padding-top: var(--_1q18b4k3);
  }
  ._1g896xf80 {
    padding-top: var(--_1q18b4k4);
  }
  ._1g896xf84 {
    padding-top: var(--_1q18b4k5);
  }
  ._1g896xf88 {
    padding-top: var(--_1q18b4k6);
  }
  ._1g896xf8c {
    padding-top: var(--_1q18b4k7);
  }
  ._1g896xf8g {
    padding-top: var(--_1q18b4k8);
  }
  ._1g896xf8k {
    padding-top: 0;
  }
  ._1g896xf8o {
    padding-bottom: var(--_1q18b4k0);
  }
  ._1g896xf8s {
    padding-bottom: var(--_1q18b4k1);
  }
  ._1g896xf8w {
    padding-bottom: var(--_1q18b4k2);
  }
  ._1g896xf90 {
    padding-bottom: var(--_1q18b4k3);
  }
  ._1g896xf94 {
    padding-bottom: var(--_1q18b4k4);
  }
  ._1g896xf98 {
    padding-bottom: var(--_1q18b4k5);
  }
  ._1g896xf9c {
    padding-bottom: var(--_1q18b4k6);
  }
  ._1g896xf9g {
    padding-bottom: var(--_1q18b4k7);
  }
  ._1g896xf9k {
    padding-bottom: var(--_1q18b4k8);
  }
  ._1g896xf9o {
    padding-bottom: 0;
  }
  ._1g896xf9s {
    padding-right: var(--_1q18b4k0);
  }
  ._1g896xf9w {
    padding-right: var(--_1q18b4k1);
  }
  ._1g896xfa0 {
    padding-right: var(--_1q18b4k2);
  }
  ._1g896xfa4 {
    padding-right: var(--_1q18b4k3);
  }
  ._1g896xfa8 {
    padding-right: var(--_1q18b4k4);
  }
  ._1g896xfac {
    padding-right: var(--_1q18b4k5);
  }
  ._1g896xfag {
    padding-right: var(--_1q18b4k6);
  }
  ._1g896xfak {
    padding-right: var(--_1q18b4k7);
  }
  ._1g896xfao {
    padding-right: var(--_1q18b4k8);
  }
  ._1g896xfas {
    padding-right: 0;
  }
  ._1g896xfaw {
    padding-left: var(--_1q18b4k0);
  }
  ._1g896xfb0 {
    padding-left: var(--_1q18b4k1);
  }
  ._1g896xfb4 {
    padding-left: var(--_1q18b4k2);
  }
  ._1g896xfb8 {
    padding-left: var(--_1q18b4k3);
  }
  ._1g896xfbc {
    padding-left: var(--_1q18b4k4);
  }
  ._1g896xfbg {
    padding-left: var(--_1q18b4k5);
  }
  ._1g896xfbk {
    padding-left: var(--_1q18b4k6);
  }
  ._1g896xfbo {
    padding-left: var(--_1q18b4k7);
  }
  ._1g896xfbs {
    padding-left: var(--_1q18b4k8);
  }
  ._1g896xfbw {
    padding-left: 0;
  }
  ._1g896xfc0 {
    margin-top: var(--_1q18b4k0);
  }
  ._1g896xfc4 {
    margin-top: var(--_1q18b4k1);
  }
  ._1g896xfc8 {
    margin-top: var(--_1q18b4k2);
  }
  ._1g896xfcc {
    margin-top: var(--_1q18b4k3);
  }
  ._1g896xfcg {
    margin-top: var(--_1q18b4k4);
  }
  ._1g896xfck {
    margin-top: var(--_1q18b4k5);
  }
  ._1g896xfco {
    margin-top: var(--_1q18b4k6);
  }
  ._1g896xfcs {
    margin-top: var(--_1q18b4k7);
  }
  ._1g896xfcw {
    margin-top: var(--_1q18b4k8);
  }
  ._1g896xfd0 {
    margin-top: 0;
  }
  ._1g896xfd4 {
    margin-bottom: var(--_1q18b4k0);
  }
  ._1g896xfd8 {
    margin-bottom: var(--_1q18b4k1);
  }
  ._1g896xfdc {
    margin-bottom: var(--_1q18b4k2);
  }
  ._1g896xfdg {
    margin-bottom: var(--_1q18b4k3);
  }
  ._1g896xfdk {
    margin-bottom: var(--_1q18b4k4);
  }
  ._1g896xfdo {
    margin-bottom: var(--_1q18b4k5);
  }
  ._1g896xfds {
    margin-bottom: var(--_1q18b4k6);
  }
  ._1g896xfdw {
    margin-bottom: var(--_1q18b4k7);
  }
  ._1g896xfe0 {
    margin-bottom: var(--_1q18b4k8);
  }
  ._1g896xfe4 {
    margin-bottom: 0;
  }
  ._1g896xfe8 {
    margin-right: var(--_1q18b4k0);
  }
  ._1g896xfec {
    margin-right: var(--_1q18b4k1);
  }
  ._1g896xfeg {
    margin-right: var(--_1q18b4k2);
  }
  ._1g896xfek {
    margin-right: var(--_1q18b4k3);
  }
  ._1g896xfeo {
    margin-right: var(--_1q18b4k4);
  }
  ._1g896xfes {
    margin-right: var(--_1q18b4k5);
  }
  ._1g896xfew {
    margin-right: var(--_1q18b4k6);
  }
  ._1g896xff0 {
    margin-right: var(--_1q18b4k7);
  }
  ._1g896xff4 {
    margin-right: var(--_1q18b4k8);
  }
  ._1g896xff8 {
    margin-right: 0;
  }
  ._1g896xffc {
    margin-left: var(--_1q18b4k0);
  }
  ._1g896xffg {
    margin-left: var(--_1q18b4k1);
  }
  ._1g896xffk {
    margin-left: var(--_1q18b4k2);
  }
  ._1g896xffo {
    margin-left: var(--_1q18b4k3);
  }
  ._1g896xffs {
    margin-left: var(--_1q18b4k4);
  }
  ._1g896xffw {
    margin-left: var(--_1q18b4k5);
  }
  ._1g896xfg0 {
    margin-left: var(--_1q18b4k6);
  }
  ._1g896xfg4 {
    margin-left: var(--_1q18b4k7);
  }
  ._1g896xfg8 {
    margin-left: var(--_1q18b4k8);
  }
  ._1g896xfgc {
    margin-left: 0;
  }
  ._1g896xfgg {
    align-items: flex-start;
  }
  ._1g896xfgk {
    align-items: center;
  }
  ._1g896xfgo {
    align-items: flex-end;
  }
  ._1g896xfgs {
    justify-content: flex-start;
  }
  ._1g896xfgw {
    justify-content: center;
  }
  ._1g896xfh0 {
    justify-content: flex-end;
  }
  ._1g896xfh4 {
    justify-content: space-between;
  }
  ._1g896xfh8 {
    flex-direction: row;
  }
  ._1g896xfhc {
    flex-direction: row-reverse;
  }
  ._1g896xfhg {
    flex-direction: column;
  }
  ._1g896xfhk {
    flex-direction: column-reverse;
  }
  ._1g896xfho {
    flex-wrap: wrap;
  }
  ._1g896xfhs {
    flex-wrap: nowrap;
  }
  ._1g896xfhw {
    flex-shrink: 0;
  }
  ._1g896xfi0 {
    flex-grow: 0;
  }
  ._1g896xfi4 {
    flex-grow: 1;
  }
  ._1g896xfi8 {
    text-align: left;
  }
  ._1g896xfic {
    text-align: center;
  }
  ._1g896xfig {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._1g896xf4x {
    display: none;
  }
  ._1g896xf51 {
    display: block;
  }
  ._1g896xf55 {
    display: inline;
  }
  ._1g896xf59 {
    display: inline-block;
  }
  ._1g896xf5d {
    display: flex;
  }
  ._1g896xf5h {
    position: relative;
  }
  ._1g896xf5l {
    position: absolute;
  }
  ._1g896xf5p {
    position: fixed;
  }
  ._1g896xf5t {
    border-radius: 0;
  }
  ._1g896xf5x {
    border-radius: 9999px;
  }
  ._1g896xf61 {
    border-radius: var(--_1q18b4kb);
  }
  ._1g896xf65 {
    border-radius: var(--_1q18b4kc);
  }
  ._1g896xf69 {
    border-radius: var(--_1q18b4kd);
  }
  ._1g896xf6d {
    border-radius: var(--_1q18b4ke);
  }
  ._1g896xf6h {
    gap: var(--_1q18b4k0);
  }
  ._1g896xf6l {
    gap: var(--_1q18b4k1);
  }
  ._1g896xf6p {
    gap: var(--_1q18b4k2);
  }
  ._1g896xf6t {
    gap: var(--_1q18b4k3);
  }
  ._1g896xf6x {
    gap: var(--_1q18b4k4);
  }
  ._1g896xf71 {
    gap: var(--_1q18b4k5);
  }
  ._1g896xf75 {
    gap: var(--_1q18b4k6);
  }
  ._1g896xf79 {
    gap: var(--_1q18b4k7);
  }
  ._1g896xf7d {
    gap: var(--_1q18b4k8);
  }
  ._1g896xf7h {
    gap: 0;
  }
  ._1g896xf7l {
    padding-top: var(--_1q18b4k0);
  }
  ._1g896xf7p {
    padding-top: var(--_1q18b4k1);
  }
  ._1g896xf7t {
    padding-top: var(--_1q18b4k2);
  }
  ._1g896xf7x {
    padding-top: var(--_1q18b4k3);
  }
  ._1g896xf81 {
    padding-top: var(--_1q18b4k4);
  }
  ._1g896xf85 {
    padding-top: var(--_1q18b4k5);
  }
  ._1g896xf89 {
    padding-top: var(--_1q18b4k6);
  }
  ._1g896xf8d {
    padding-top: var(--_1q18b4k7);
  }
  ._1g896xf8h {
    padding-top: var(--_1q18b4k8);
  }
  ._1g896xf8l {
    padding-top: 0;
  }
  ._1g896xf8p {
    padding-bottom: var(--_1q18b4k0);
  }
  ._1g896xf8t {
    padding-bottom: var(--_1q18b4k1);
  }
  ._1g896xf8x {
    padding-bottom: var(--_1q18b4k2);
  }
  ._1g896xf91 {
    padding-bottom: var(--_1q18b4k3);
  }
  ._1g896xf95 {
    padding-bottom: var(--_1q18b4k4);
  }
  ._1g896xf99 {
    padding-bottom: var(--_1q18b4k5);
  }
  ._1g896xf9d {
    padding-bottom: var(--_1q18b4k6);
  }
  ._1g896xf9h {
    padding-bottom: var(--_1q18b4k7);
  }
  ._1g896xf9l {
    padding-bottom: var(--_1q18b4k8);
  }
  ._1g896xf9p {
    padding-bottom: 0;
  }
  ._1g896xf9t {
    padding-right: var(--_1q18b4k0);
  }
  ._1g896xf9x {
    padding-right: var(--_1q18b4k1);
  }
  ._1g896xfa1 {
    padding-right: var(--_1q18b4k2);
  }
  ._1g896xfa5 {
    padding-right: var(--_1q18b4k3);
  }
  ._1g896xfa9 {
    padding-right: var(--_1q18b4k4);
  }
  ._1g896xfad {
    padding-right: var(--_1q18b4k5);
  }
  ._1g896xfah {
    padding-right: var(--_1q18b4k6);
  }
  ._1g896xfal {
    padding-right: var(--_1q18b4k7);
  }
  ._1g896xfap {
    padding-right: var(--_1q18b4k8);
  }
  ._1g896xfat {
    padding-right: 0;
  }
  ._1g896xfax {
    padding-left: var(--_1q18b4k0);
  }
  ._1g896xfb1 {
    padding-left: var(--_1q18b4k1);
  }
  ._1g896xfb5 {
    padding-left: var(--_1q18b4k2);
  }
  ._1g896xfb9 {
    padding-left: var(--_1q18b4k3);
  }
  ._1g896xfbd {
    padding-left: var(--_1q18b4k4);
  }
  ._1g896xfbh {
    padding-left: var(--_1q18b4k5);
  }
  ._1g896xfbl {
    padding-left: var(--_1q18b4k6);
  }
  ._1g896xfbp {
    padding-left: var(--_1q18b4k7);
  }
  ._1g896xfbt {
    padding-left: var(--_1q18b4k8);
  }
  ._1g896xfbx {
    padding-left: 0;
  }
  ._1g896xfc1 {
    margin-top: var(--_1q18b4k0);
  }
  ._1g896xfc5 {
    margin-top: var(--_1q18b4k1);
  }
  ._1g896xfc9 {
    margin-top: var(--_1q18b4k2);
  }
  ._1g896xfcd {
    margin-top: var(--_1q18b4k3);
  }
  ._1g896xfch {
    margin-top: var(--_1q18b4k4);
  }
  ._1g896xfcl {
    margin-top: var(--_1q18b4k5);
  }
  ._1g896xfcp {
    margin-top: var(--_1q18b4k6);
  }
  ._1g896xfct {
    margin-top: var(--_1q18b4k7);
  }
  ._1g896xfcx {
    margin-top: var(--_1q18b4k8);
  }
  ._1g896xfd1 {
    margin-top: 0;
  }
  ._1g896xfd5 {
    margin-bottom: var(--_1q18b4k0);
  }
  ._1g896xfd9 {
    margin-bottom: var(--_1q18b4k1);
  }
  ._1g896xfdd {
    margin-bottom: var(--_1q18b4k2);
  }
  ._1g896xfdh {
    margin-bottom: var(--_1q18b4k3);
  }
  ._1g896xfdl {
    margin-bottom: var(--_1q18b4k4);
  }
  ._1g896xfdp {
    margin-bottom: var(--_1q18b4k5);
  }
  ._1g896xfdt {
    margin-bottom: var(--_1q18b4k6);
  }
  ._1g896xfdx {
    margin-bottom: var(--_1q18b4k7);
  }
  ._1g896xfe1 {
    margin-bottom: var(--_1q18b4k8);
  }
  ._1g896xfe5 {
    margin-bottom: 0;
  }
  ._1g896xfe9 {
    margin-right: var(--_1q18b4k0);
  }
  ._1g896xfed {
    margin-right: var(--_1q18b4k1);
  }
  ._1g896xfeh {
    margin-right: var(--_1q18b4k2);
  }
  ._1g896xfel {
    margin-right: var(--_1q18b4k3);
  }
  ._1g896xfep {
    margin-right: var(--_1q18b4k4);
  }
  ._1g896xfet {
    margin-right: var(--_1q18b4k5);
  }
  ._1g896xfex {
    margin-right: var(--_1q18b4k6);
  }
  ._1g896xff1 {
    margin-right: var(--_1q18b4k7);
  }
  ._1g896xff5 {
    margin-right: var(--_1q18b4k8);
  }
  ._1g896xff9 {
    margin-right: 0;
  }
  ._1g896xffd {
    margin-left: var(--_1q18b4k0);
  }
  ._1g896xffh {
    margin-left: var(--_1q18b4k1);
  }
  ._1g896xffl {
    margin-left: var(--_1q18b4k2);
  }
  ._1g896xffp {
    margin-left: var(--_1q18b4k3);
  }
  ._1g896xfft {
    margin-left: var(--_1q18b4k4);
  }
  ._1g896xffx {
    margin-left: var(--_1q18b4k5);
  }
  ._1g896xfg1 {
    margin-left: var(--_1q18b4k6);
  }
  ._1g896xfg5 {
    margin-left: var(--_1q18b4k7);
  }
  ._1g896xfg9 {
    margin-left: var(--_1q18b4k8);
  }
  ._1g896xfgd {
    margin-left: 0;
  }
  ._1g896xfgh {
    align-items: flex-start;
  }
  ._1g896xfgl {
    align-items: center;
  }
  ._1g896xfgp {
    align-items: flex-end;
  }
  ._1g896xfgt {
    justify-content: flex-start;
  }
  ._1g896xfgx {
    justify-content: center;
  }
  ._1g896xfh1 {
    justify-content: flex-end;
  }
  ._1g896xfh5 {
    justify-content: space-between;
  }
  ._1g896xfh9 {
    flex-direction: row;
  }
  ._1g896xfhd {
    flex-direction: row-reverse;
  }
  ._1g896xfhh {
    flex-direction: column;
  }
  ._1g896xfhl {
    flex-direction: column-reverse;
  }
  ._1g896xfhp {
    flex-wrap: wrap;
  }
  ._1g896xfht {
    flex-wrap: nowrap;
  }
  ._1g896xfhx {
    flex-shrink: 0;
  }
  ._1g896xfi1 {
    flex-grow: 0;
  }
  ._1g896xfi5 {
    flex-grow: 1;
  }
  ._1g896xfi9 {
    text-align: left;
  }
  ._1g896xfid {
    text-align: center;
  }
  ._1g896xfih {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._1g896xf4y {
    display: none;
  }
  ._1g896xf52 {
    display: block;
  }
  ._1g896xf56 {
    display: inline;
  }
  ._1g896xf5a {
    display: inline-block;
  }
  ._1g896xf5e {
    display: flex;
  }
  ._1g896xf5i {
    position: relative;
  }
  ._1g896xf5m {
    position: absolute;
  }
  ._1g896xf5q {
    position: fixed;
  }
  ._1g896xf5u {
    border-radius: 0;
  }
  ._1g896xf5y {
    border-radius: 9999px;
  }
  ._1g896xf62 {
    border-radius: var(--_1q18b4kb);
  }
  ._1g896xf66 {
    border-radius: var(--_1q18b4kc);
  }
  ._1g896xf6a {
    border-radius: var(--_1q18b4kd);
  }
  ._1g896xf6e {
    border-radius: var(--_1q18b4ke);
  }
  ._1g896xf6i {
    gap: var(--_1q18b4k0);
  }
  ._1g896xf6m {
    gap: var(--_1q18b4k1);
  }
  ._1g896xf6q {
    gap: var(--_1q18b4k2);
  }
  ._1g896xf6u {
    gap: var(--_1q18b4k3);
  }
  ._1g896xf6y {
    gap: var(--_1q18b4k4);
  }
  ._1g896xf72 {
    gap: var(--_1q18b4k5);
  }
  ._1g896xf76 {
    gap: var(--_1q18b4k6);
  }
  ._1g896xf7a {
    gap: var(--_1q18b4k7);
  }
  ._1g896xf7e {
    gap: var(--_1q18b4k8);
  }
  ._1g896xf7i {
    gap: 0;
  }
  ._1g896xf7m {
    padding-top: var(--_1q18b4k0);
  }
  ._1g896xf7q {
    padding-top: var(--_1q18b4k1);
  }
  ._1g896xf7u {
    padding-top: var(--_1q18b4k2);
  }
  ._1g896xf7y {
    padding-top: var(--_1q18b4k3);
  }
  ._1g896xf82 {
    padding-top: var(--_1q18b4k4);
  }
  ._1g896xf86 {
    padding-top: var(--_1q18b4k5);
  }
  ._1g896xf8a {
    padding-top: var(--_1q18b4k6);
  }
  ._1g896xf8e {
    padding-top: var(--_1q18b4k7);
  }
  ._1g896xf8i {
    padding-top: var(--_1q18b4k8);
  }
  ._1g896xf8m {
    padding-top: 0;
  }
  ._1g896xf8q {
    padding-bottom: var(--_1q18b4k0);
  }
  ._1g896xf8u {
    padding-bottom: var(--_1q18b4k1);
  }
  ._1g896xf8y {
    padding-bottom: var(--_1q18b4k2);
  }
  ._1g896xf92 {
    padding-bottom: var(--_1q18b4k3);
  }
  ._1g896xf96 {
    padding-bottom: var(--_1q18b4k4);
  }
  ._1g896xf9a {
    padding-bottom: var(--_1q18b4k5);
  }
  ._1g896xf9e {
    padding-bottom: var(--_1q18b4k6);
  }
  ._1g896xf9i {
    padding-bottom: var(--_1q18b4k7);
  }
  ._1g896xf9m {
    padding-bottom: var(--_1q18b4k8);
  }
  ._1g896xf9q {
    padding-bottom: 0;
  }
  ._1g896xf9u {
    padding-right: var(--_1q18b4k0);
  }
  ._1g896xf9y {
    padding-right: var(--_1q18b4k1);
  }
  ._1g896xfa2 {
    padding-right: var(--_1q18b4k2);
  }
  ._1g896xfa6 {
    padding-right: var(--_1q18b4k3);
  }
  ._1g896xfaa {
    padding-right: var(--_1q18b4k4);
  }
  ._1g896xfae {
    padding-right: var(--_1q18b4k5);
  }
  ._1g896xfai {
    padding-right: var(--_1q18b4k6);
  }
  ._1g896xfam {
    padding-right: var(--_1q18b4k7);
  }
  ._1g896xfaq {
    padding-right: var(--_1q18b4k8);
  }
  ._1g896xfau {
    padding-right: 0;
  }
  ._1g896xfay {
    padding-left: var(--_1q18b4k0);
  }
  ._1g896xfb2 {
    padding-left: var(--_1q18b4k1);
  }
  ._1g896xfb6 {
    padding-left: var(--_1q18b4k2);
  }
  ._1g896xfba {
    padding-left: var(--_1q18b4k3);
  }
  ._1g896xfbe {
    padding-left: var(--_1q18b4k4);
  }
  ._1g896xfbi {
    padding-left: var(--_1q18b4k5);
  }
  ._1g896xfbm {
    padding-left: var(--_1q18b4k6);
  }
  ._1g896xfbq {
    padding-left: var(--_1q18b4k7);
  }
  ._1g896xfbu {
    padding-left: var(--_1q18b4k8);
  }
  ._1g896xfby {
    padding-left: 0;
  }
  ._1g896xfc2 {
    margin-top: var(--_1q18b4k0);
  }
  ._1g896xfc6 {
    margin-top: var(--_1q18b4k1);
  }
  ._1g896xfca {
    margin-top: var(--_1q18b4k2);
  }
  ._1g896xfce {
    margin-top: var(--_1q18b4k3);
  }
  ._1g896xfci {
    margin-top: var(--_1q18b4k4);
  }
  ._1g896xfcm {
    margin-top: var(--_1q18b4k5);
  }
  ._1g896xfcq {
    margin-top: var(--_1q18b4k6);
  }
  ._1g896xfcu {
    margin-top: var(--_1q18b4k7);
  }
  ._1g896xfcy {
    margin-top: var(--_1q18b4k8);
  }
  ._1g896xfd2 {
    margin-top: 0;
  }
  ._1g896xfd6 {
    margin-bottom: var(--_1q18b4k0);
  }
  ._1g896xfda {
    margin-bottom: var(--_1q18b4k1);
  }
  ._1g896xfde {
    margin-bottom: var(--_1q18b4k2);
  }
  ._1g896xfdi {
    margin-bottom: var(--_1q18b4k3);
  }
  ._1g896xfdm {
    margin-bottom: var(--_1q18b4k4);
  }
  ._1g896xfdq {
    margin-bottom: var(--_1q18b4k5);
  }
  ._1g896xfdu {
    margin-bottom: var(--_1q18b4k6);
  }
  ._1g896xfdy {
    margin-bottom: var(--_1q18b4k7);
  }
  ._1g896xfe2 {
    margin-bottom: var(--_1q18b4k8);
  }
  ._1g896xfe6 {
    margin-bottom: 0;
  }
  ._1g896xfea {
    margin-right: var(--_1q18b4k0);
  }
  ._1g896xfee {
    margin-right: var(--_1q18b4k1);
  }
  ._1g896xfei {
    margin-right: var(--_1q18b4k2);
  }
  ._1g896xfem {
    margin-right: var(--_1q18b4k3);
  }
  ._1g896xfeq {
    margin-right: var(--_1q18b4k4);
  }
  ._1g896xfeu {
    margin-right: var(--_1q18b4k5);
  }
  ._1g896xfey {
    margin-right: var(--_1q18b4k6);
  }
  ._1g896xff2 {
    margin-right: var(--_1q18b4k7);
  }
  ._1g896xff6 {
    margin-right: var(--_1q18b4k8);
  }
  ._1g896xffa {
    margin-right: 0;
  }
  ._1g896xffe {
    margin-left: var(--_1q18b4k0);
  }
  ._1g896xffi {
    margin-left: var(--_1q18b4k1);
  }
  ._1g896xffm {
    margin-left: var(--_1q18b4k2);
  }
  ._1g896xffq {
    margin-left: var(--_1q18b4k3);
  }
  ._1g896xffu {
    margin-left: var(--_1q18b4k4);
  }
  ._1g896xffy {
    margin-left: var(--_1q18b4k5);
  }
  ._1g896xfg2 {
    margin-left: var(--_1q18b4k6);
  }
  ._1g896xfg6 {
    margin-left: var(--_1q18b4k7);
  }
  ._1g896xfga {
    margin-left: var(--_1q18b4k8);
  }
  ._1g896xfge {
    margin-left: 0;
  }
  ._1g896xfgi {
    align-items: flex-start;
  }
  ._1g896xfgm {
    align-items: center;
  }
  ._1g896xfgq {
    align-items: flex-end;
  }
  ._1g896xfgu {
    justify-content: flex-start;
  }
  ._1g896xfgy {
    justify-content: center;
  }
  ._1g896xfh2 {
    justify-content: flex-end;
  }
  ._1g896xfh6 {
    justify-content: space-between;
  }
  ._1g896xfha {
    flex-direction: row;
  }
  ._1g896xfhe {
    flex-direction: row-reverse;
  }
  ._1g896xfhi {
    flex-direction: column;
  }
  ._1g896xfhm {
    flex-direction: column-reverse;
  }
  ._1g896xfhq {
    flex-wrap: wrap;
  }
  ._1g896xfhu {
    flex-wrap: nowrap;
  }
  ._1g896xfhy {
    flex-shrink: 0;
  }
  ._1g896xfi2 {
    flex-grow: 0;
  }
  ._1g896xfi6 {
    flex-grow: 1;
  }
  ._1g896xfia {
    text-align: left;
  }
  ._1g896xfie {
    text-align: center;
  }
  ._1g896xfii {
    text-align: right;
  }
}
.mowtpn4 {
  font-size: var(--mowtpn0);
  line-height: var(--mowtpn1);
}
.mowtpn4:before {
  content: "";
  display: table;
  margin-bottom: var(--mowtpn2);
}
.mowtpn4:after {
  content: "";
  display: table;
  margin-top: var(--mowtpn3);
}
.i0m8330 {
  font-family: var(--_1q18b4k2w);
}
.i0m8331 {
  font-weight: var(--_1q18b4k46);
}
.i0m8332 {
  font-weight: var(--_1q18b4k47);
}
.i0m8333 {
  font-weight: var(--_1q18b4k48);
}
.i0m8334 {
  --mowtpn0: var(--_1q18b4k32);
  --mowtpn1: var(--_1q18b4k33);
  --mowtpn2: var(--_1q18b4k35);
  --mowtpn3: var(--_1q18b4k36);
}
.i0m8337 {
  --mowtpn0: var(--_1q18b4k3c);
  --mowtpn1: var(--_1q18b4k3d);
  --mowtpn2: var(--_1q18b4k3f);
  --mowtpn3: var(--_1q18b4k3g);
}
.i0m833a {
  --mowtpn0: var(--_1q18b4k3m);
  --mowtpn1: var(--_1q18b4k3n);
  --mowtpn2: var(--_1q18b4k3p);
  --mowtpn3: var(--_1q18b4k3q);
}
.i0m833d {
  --mowtpn0: var(--_1q18b4k3w);
  --mowtpn1: var(--_1q18b4k3x);
  --mowtpn2: var(--_1q18b4k3z);
  --mowtpn3: var(--_1q18b4k40);
}
.i0m833g {
  font-size: var(--_1q18b4k32);
  line-height: var(--_1q18b4k33);
}
.i0m833h {
  font-size: var(--_1q18b4k3c);
  line-height: var(--_1q18b4k3d);
}
.i0m833i {
  font-size: var(--_1q18b4k3m);
  line-height: var(--_1q18b4k3n);
}
.i0m833j {
  font-size: var(--_1q18b4k3w);
  line-height: var(--_1q18b4k3x);
}
.i0m833k {
  font-weight: var(--_1q18b4k5d);
}
.i0m833l {
  font-weight: var(--_1q18b4k5e);
}
.i0m833m {
  --mowtpn0: var(--_1q18b4k49);
  --mowtpn1: var(--_1q18b4k4a);
  --mowtpn2: var(--_1q18b4k4c);
  --mowtpn3: var(--_1q18b4k4d);
}
.i0m833p {
  --mowtpn0: var(--_1q18b4k4j);
  --mowtpn1: var(--_1q18b4k4k);
  --mowtpn2: var(--_1q18b4k4m);
  --mowtpn3: var(--_1q18b4k4n);
}
.i0m833s {
  --mowtpn0: var(--_1q18b4k4t);
  --mowtpn1: var(--_1q18b4k4u);
  --mowtpn2: var(--_1q18b4k4w);
  --mowtpn3: var(--_1q18b4k4x);
}
.i0m833v {
  --mowtpn0: var(--_1q18b4k53);
  --mowtpn1: var(--_1q18b4k54);
  --mowtpn2: var(--_1q18b4k56);
  --mowtpn3: var(--_1q18b4k57);
}
html:not(._1g896xf10) .i0m83318 {
  --i0m833y: var(--_1q18b4k19);
  --i0m833z: var(--_1q18b4k17);
  --i0m83310: var(--_1q18b4k1d);
  --i0m83311: var(--_1q18b4k1o);
  --i0m83312: var(--_1q18b4k1m);
  --i0m83313: var(--_1q18b4k15);
  --i0m83314: var(--_1q18b4k1b);
  --i0m83315: var(--_1q18b4k1k);
  --i0m83316: var(--_1q18b4k1r);
  --i0m83317: var(--_1q18b4k1f);
}
html:not(._1g896xf10) .i0m83319 {
  --i0m833y: var(--_1q18b4k1a);
  --i0m833z: var(--_1q18b4k18);
  --i0m83310: var(--_1q18b4k1e);
  --i0m83311: var(--_1q18b4k1p);
  --i0m83312: var(--_1q18b4k1n);
  --i0m83313: var(--_1q18b4k16);
  --i0m83314: var(--_1q18b4k1c);
  --i0m83315: var(--_1q18b4k1l);
  --i0m83316: var(--_1q18b4k1s);
  --i0m83317: var(--_1q18b4k1h);
}
html._1g896xf10 .i0m8331a {
  --i0m833y: var(--_1q18b4k19);
  --i0m833z: var(--_1q18b4k17);
  --i0m83310: var(--_1q18b4k1d);
  --i0m83311: var(--_1q18b4k1o);
  --i0m83312: var(--_1q18b4k1m);
  --i0m83313: var(--_1q18b4k15);
  --i0m83314: var(--_1q18b4k1b);
  --i0m83315: var(--_1q18b4k1k);
  --i0m83316: var(--_1q18b4k1r);
  --i0m83317: var(--_1q18b4k1f);
}
html._1g896xf10 .i0m8331b {
  --i0m833y: var(--_1q18b4k1a);
  --i0m833z: var(--_1q18b4k18);
  --i0m83310: var(--_1q18b4k1e);
  --i0m83311: var(--_1q18b4k1p);
  --i0m83312: var(--_1q18b4k1n);
  --i0m83313: var(--_1q18b4k16);
  --i0m83314: var(--_1q18b4k1c);
  --i0m83315: var(--_1q18b4k1l);
  --i0m83316: var(--_1q18b4k1s);
  --i0m83317: var(--_1q18b4k1h);
}
html:not(._1g896xf10) .i0m8331c,
html:not(._1g896xf10) .i0m8331d,
html:not(._1g896xf10) .i0m8331e,
html:not(._1g896xf10) .i0m8331f {
  --i0m83315: var(--i0m833y);
}
html:not(._1g896xf10) .i0m8331g,
html:not(._1g896xf10) .i0m8331h {
  --i0m83315: var(--i0m833z);
}
html:not(._1g896xf10) .i0m8331i {
  --i0m83315: var(--i0m83312);
}
html:not(._1g896xf10) .i0m8331j {
  --i0m83315: var(--i0m83310);
}
html:not(._1g896xf10) .i0m8331k {
  --i0m83315: var(--i0m83311);
}
html._1g896xf10 .i0m8331l,
html._1g896xf10 .i0m8331m,
html._1g896xf10 .i0m8331n,
html._1g896xf10 .i0m8331o {
  --i0m83315: var(--i0m833y);
}
html._1g896xf10 .i0m8331p,
html._1g896xf10 .i0m8331q {
  --i0m83315: var(--i0m833z);
}
html._1g896xf10 .i0m8331r {
  --i0m83315: var(--i0m83312);
}
html._1g896xf10 .i0m8331s {
  --i0m83315: var(--i0m83310);
}
html._1g896xf10 .i0m8331t {
  --i0m83315: var(--i0m83311);
}
.i0m8331u {
  color: var(--i0m833y);
}
.i0m8331v {
  color: var(--i0m833z);
}
.i0m8331w {
  color: var(--i0m83310);
}
.i0m8331x {
  color: var(--i0m83311);
}
.i0m8331y {
  color: var(--i0m83312);
}
.i0m8331z {
  color: var(--i0m83313);
}
.i0m83320 {
  color: var(--i0m83314);
}
.i0m83321 {
  color: var(--i0m83315);
}
.i0m83322 {
  color: var(--i0m83316);
}
.i0m83323 {
  color: var(--i0m83317);
}
.i0m83324 {
  padding-bottom: calc((var(--_1q18b4k9) - var(--_1q18b4k33)) / 2);
  padding-top: calc((var(--_1q18b4k9) - var(--_1q18b4k33)) / 2);
}
.i0m83325 {
  padding-bottom: calc((var(--_1q18b4k9) - var(--_1q18b4k3d)) / 2);
  padding-top: calc((var(--_1q18b4k9) - var(--_1q18b4k3d)) / 2);
}
.i0m83326 {
  padding-bottom: calc((var(--_1q18b4k9) - var(--_1q18b4k3n)) / 2);
  padding-top: calc((var(--_1q18b4k9) - var(--_1q18b4k3n)) / 2);
}
.i0m83327 {
  padding-bottom: calc((var(--_1q18b4k9) - var(--_1q18b4k3x)) / 2);
  padding-top: calc((var(--_1q18b4k9) - var(--_1q18b4k3x)) / 2);
}
@media screen and (min-width: 740px) {
  .i0m8334 {
    --mowtpn0: var(--_1q18b4k37);
    --mowtpn1: var(--_1q18b4k38);
    --mowtpn2: var(--_1q18b4k3a);
    --mowtpn3: var(--_1q18b4k3b);
  }
  .i0m8337 {
    --mowtpn0: var(--_1q18b4k3h);
    --mowtpn1: var(--_1q18b4k3i);
    --mowtpn2: var(--_1q18b4k3k);
    --mowtpn3: var(--_1q18b4k3l);
  }
  .i0m833a {
    --mowtpn0: var(--_1q18b4k3r);
    --mowtpn1: var(--_1q18b4k3s);
    --mowtpn2: var(--_1q18b4k3u);
    --mowtpn3: var(--_1q18b4k3v);
  }
  .i0m833d {
    --mowtpn0: var(--_1q18b4k41);
    --mowtpn1: var(--_1q18b4k42);
    --mowtpn2: var(--_1q18b4k44);
    --mowtpn3: var(--_1q18b4k45);
  }
  .i0m833g {
    font-size: var(--_1q18b4k37);
    line-height: var(--_1q18b4k38);
  }
  .i0m833h {
    font-size: var(--_1q18b4k3h);
    line-height: var(--_1q18b4k3i);
  }
  .i0m833i {
    font-size: var(--_1q18b4k3r);
    line-height: var(--_1q18b4k3s);
  }
  .i0m833j {
    font-size: var(--_1q18b4k41);
    line-height: var(--_1q18b4k42);
  }
  .i0m833m {
    --mowtpn0: var(--_1q18b4k4e);
    --mowtpn1: var(--_1q18b4k4f);
    --mowtpn2: var(--_1q18b4k4h);
    --mowtpn3: var(--_1q18b4k4i);
  }
  .i0m833p {
    --mowtpn0: var(--_1q18b4k4o);
    --mowtpn1: var(--_1q18b4k4p);
    --mowtpn2: var(--_1q18b4k4r);
    --mowtpn3: var(--_1q18b4k4s);
  }
  .i0m833s {
    --mowtpn0: var(--_1q18b4k4y);
    --mowtpn1: var(--_1q18b4k4z);
    --mowtpn2: var(--_1q18b4k51);
    --mowtpn3: var(--_1q18b4k52);
  }
  .i0m833v {
    --mowtpn0: var(--_1q18b4k58);
    --mowtpn1: var(--_1q18b4k59);
    --mowtpn2: var(--_1q18b4k5b);
    --mowtpn3: var(--_1q18b4k5c);
  }
  .i0m83324 {
    padding-bottom: calc((var(--_1q18b4k9) - var(--_1q18b4k38)) / 2);
    padding-top: calc((var(--_1q18b4k9) - var(--_1q18b4k38)) / 2);
  }
  .i0m83325 {
    padding-bottom: calc((var(--_1q18b4k9) - var(--_1q18b4k3i)) / 2);
    padding-top: calc((var(--_1q18b4k9) - var(--_1q18b4k3i)) / 2);
  }
  .i0m83326 {
    padding-bottom: calc((var(--_1q18b4k9) - var(--_1q18b4k3s)) / 2);
    padding-top: calc((var(--_1q18b4k9) - var(--_1q18b4k3s)) / 2);
  }
  .i0m83327 {
    padding-bottom: calc((var(--_1q18b4k9) - var(--_1q18b4k42)) / 2);
    padding-top: calc((var(--_1q18b4k9) - var(--_1q18b4k42)) / 2);
  }
}
.k60cqs0 {
  --_1q18b4k0: 24px;
  --_1q18b4k1: 8px;
  --_1q18b4k2: 12px;
  --_1q18b4k3: 16px;
  --_1q18b4k4: 24px;
  --_1q18b4k5: 32px;
  --_1q18b4k6: 48px;
  --_1q18b4k7: 64px;
  --_1q18b4k8: 96px;
  --_1q18b4k9: 48px;
  --_1q18b4ka: 4px;
  --_1q18b4kb: 4px;
  --_1q18b4kc: 8px;
  --_1q18b4kd: 16px;
  --_1q18b4ke: 24px;
  --_1q18b4kf: #e60278;
  --_1q18b4kg: #f8b1dc;
  --_1q18b4kh: #fdc221;
  --_1q18b4ki: #fee384;
  --_1q18b4kj: #b91e1e;
  --_1q18b4kk: #fb999a;
  --_1q18b4kl: #838fa5;
  --_1q18b4km: rgba(153, 191, 247, 0.7);
  --_1q18b4kn: #1e47a9;
  --_1q18b4ko: #99bff7;
  --_1q18b4kp: #1d559d;
  --_1q18b4kq: #98c9f1;
  --_1q18b4kr: #2e3849;
  --_1q18b4kt: #eaecf1;
  --_1q18b4ks: #fff;
  --_1q18b4ku: #12784f;
  --_1q18b4kv: #8bdec5;
  --_1q18b4kw: #7f35a9;
  --_1q18b4kx: #e1b2f5;
  --_1q18b4ky: 2px;
  --_1q18b4kz: 4px;
  --_1q18b4k10: 6px;
  --_1q18b4k11: 400px;
  --_1q18b4k12: 660px;
  --_1q18b4k13: 940px;
  --_1q18b4k14: 1280px;
  --_1q18b4k15: #e60278;
  --_1q18b4k16: #f8b1dc;
  --_1q18b4k17: #723d02;
  --_1q18b4k18: #fee384;
  --_1q18b4k19: #b91e1e;
  --_1q18b4k1a: #fb999a;
  --_1q18b4k1b: #1e47a9;
  --_1q18b4k1c: #99bff7;
  --_1q18b4k1d: #1d559d;
  --_1q18b4k1e: #98c9f1;
  --_1q18b4k1f: #2e3849;
  --_1q18b4k1h: #fff;
  --_1q18b4k1g: #2e3849;
  --_1q18b4k1i: #5b2084;
  --_1q18b4k1j: #f0d6fa;
  --_1q18b4k1k: #2e3849;
  --_1q18b4k1l: #fff;
  --_1q18b4k1m: #12784f;
  --_1q18b4k1n: #8bdec5;
  --_1q18b4k1o: #7f35a9;
  --_1q18b4k1p: #e1b2f5;
  --_1q18b4k1q: #e05821;
  --_1q18b4k1r: #5a6881;
  --_1q18b4k1s: hsla(0, 0%, 100%, 0.65);
  --_1q18b4k1t: #fff;
  --_1q18b4k1u: #1c2330;
  --_1q18b4k1v: #051a49;
  --_1q18b4k1w: #e60278;
  --_1q18b4k1x: #cd026b;
  --_1q18b4k1y: #fd0585;
  --_1q18b4k1z: #feeffa;
  --_1q18b4k20: #fdd7f3;
  --_1q18b4k21: #fde3f6;
  --_1q18b4k22: #fdc221;
  --_1q18b4k23: #fef8de;
  --_1q18b4k24: #b91e1e;
  --_1q18b4k25: #a31a1a;
  --_1q18b4k26: #db1616;
  --_1q18b4k27: #ffe3e2;
  --_1q18b4k28: #fef3f3;
  --_1q18b4k29: #fcdbdb;
  --_1q18b4k2a: #fde7e7;
  --_1q18b4k2b: #1e47a9;
  --_1q18b4k2c: #1a3e93;
  --_1q18b4k2d: #2455c9;
  --_1q18b4k2e: #f0f7fe;
  --_1q18b4k2f: #d8eafc;
  --_1q18b4k2g: #e4f1fd;
  --_1q18b4k2h: #1d559d;
  --_1q18b4k2i: #e3f2fb;
  --_1q18b4k2j: #2e3849;
  --_1q18b4k2k: #242c39;
  --_1q18b4k2l: #384459;
  --_1q18b4k2m: #f3f5f7;
  --_1q18b4k2n: #f3f5f7;
  --_1q18b4k2o: #e4e8ed;
  --_1q18b4k2p: #ebeff2;
  --_1q18b4k2q: #12784f;
  --_1q18b4k2r: #e2f7f1;
  --_1q18b4k2s: #7f35a9;
  --_1q18b4k2t: #f9ebfd;
  --_1q18b4k2u: #fff;
  --_1q18b4k2v: #1c2330;
  --_1q18b4k2w: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --_1q18b4k2x: 783;
  --_1q18b4k2y: 1057;
  --_1q18b4k2z: -274;
  --_1q18b4k30: 0;
  --_1q18b4k31: 1000;
  --_1q18b4k32: 12px;
  --_1q18b4k33: 18.396px;
  --_1q18b4k34: 9.396px;
  --_1q18b4k35: -0.375em;
  --_1q18b4k36: -0.375em;
  --_1q18b4k37: 12px;
  --_1q18b4k38: 18.396px;
  --_1q18b4k39: 9.396px;
  --_1q18b4k3a: -0.375em;
  --_1q18b4k3b: -0.375em;
  --_1q18b4k3c: 14px;
  --_1q18b4k3d: 20.962px;
  --_1q18b4k3e: 10.962px;
  --_1q18b4k3f: -0.3571em;
  --_1q18b4k3g: -0.3571em;
  --_1q18b4k3h: 14px;
  --_1q18b4k3i: 20.962px;
  --_1q18b4k3j: 10.962px;
  --_1q18b4k3k: -0.3571em;
  --_1q18b4k3l: -0.3571em;
  --_1q18b4k3m: 16px;
  --_1q18b4k3n: 24.528px;
  --_1q18b4k3o: 12.528px;
  --_1q18b4k3p: -0.375em;
  --_1q18b4k3q: -0.375em;
  --_1q18b4k3r: 16px;
  --_1q18b4k3s: 24.528px;
  --_1q18b4k3t: 12.528px;
  --_1q18b4k3u: -0.375em;
  --_1q18b4k3v: -0.375em;
  --_1q18b4k3w: 18px;
  --_1q18b4k3x: 27.094px;
  --_1q18b4k3y: 14.094px;
  --_1q18b4k3z: -0.3611em;
  --_1q18b4k40: -0.3611em;
  --_1q18b4k41: 18px;
  --_1q18b4k42: 27.094px;
  --_1q18b4k43: 14.094px;
  --_1q18b4k44: -0.3611em;
  --_1q18b4k45: -0.3611em;
  --_1q18b4k46: 400;
  --_1q18b4k47: 500;
  --_1q18b4k48: 700;
  --_1q18b4k49: 28px;
  --_1q18b4k4a: 32.924px;
  --_1q18b4k4b: 21.924px;
  --_1q18b4k4c: -0.1964em;
  --_1q18b4k4d: -0.1964em;
  --_1q18b4k4e: 36px;
  --_1q18b4k4f: 42.188px;
  --_1q18b4k4g: 28.188px;
  --_1q18b4k4h: -0.1944em;
  --_1q18b4k4i: -0.1944em;
  --_1q18b4k4j: 24px;
  --_1q18b4k4k: 29.792px;
  --_1q18b4k4l: 18.792px;
  --_1q18b4k4m: -0.2292em;
  --_1q18b4k4n: -0.2292em;
  --_1q18b4k4o: 30px;
  --_1q18b4k4p: 36.49px;
  --_1q18b4k4q: 23.49px;
  --_1q18b4k4r: -0.2167em;
  --_1q18b4k4s: -0.2167em;
  --_1q18b4k4t: 22px;
  --_1q18b4k4u: 27.226px;
  --_1q18b4k4v: 17.226px;
  --_1q18b4k4w: -0.2273em;
  --_1q18b4k4x: -0.2273em;
  --_1q18b4k4y: 24px;
  --_1q18b4k4z: 29.792px;
  --_1q18b4k50: 18.792px;
  --_1q18b4k51: -0.2292em;
  --_1q18b4k52: -0.2292em;
  --_1q18b4k53: 20px;
  --_1q18b4k54: 24.66px;
  --_1q18b4k55: 15.66px;
  --_1q18b4k56: -0.225em;
  --_1q18b4k57: -0.225em;
  --_1q18b4k58: 20px;
  --_1q18b4k59: 24.66px;
  --_1q18b4k5a: 15.66px;
  --_1q18b4k5b: -0.225em;
  --_1q18b4k5c: -0.225em;
  --_1q18b4k5d: 400;
  --_1q18b4k5e: 500;
  --_1q18b4k5f: underline;
  --_1q18b4k5g: 24px;
  --_1q18b4k5h: 20px;
  --_1q18b4k5i: transform 0.125s ease, opacity 0.125s ease;
  --_1q18b4k5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1q18b4k5k: scale(0.95);
  --_1q18b4k5l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --_1q18b4k5m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --_1q18b4k5n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
.serhf56 {
  background: var(--serhf50);
}
.serhf57 {
  background: var(--serhf51);
}
.serhf58 {
  background: var(--serhf52);
}
.serhf59 {
  background: var(--serhf53);
}
.serhf5a {
  background: var(--serhf54);
}
.serhf5b {
  background: var(--serhf55);
}
html:not(._1g896xf10) .serhf5c {
  --serhf50: var(--_1q18b4kw);
  --serhf51: var(--_1q18b4kp);
  --serhf52: var(--_1q18b4ku);
  --serhf53: var(--_1q18b4kh);
  --serhf54: var(--_1q18b4kj);
  --serhf55: var(--_1q18b4kn);
}
html:not(._1g896xf10) .serhf5d {
  --serhf50: var(--_1q18b4kx);
  --serhf51: var(--_1q18b4kq);
  --serhf52: var(--_1q18b4kv);
  --serhf53: var(--_1q18b4ki);
  --serhf54: var(--_1q18b4kk);
  --serhf55: var(--_1q18b4ko);
}
html._1g896xf10 .serhf5e {
  --serhf50: var(--_1q18b4kw);
  --serhf51: var(--_1q18b4kp);
  --serhf52: var(--_1q18b4ku);
  --serhf53: var(--_1q18b4kh);
  --serhf54: var(--_1q18b4kj);
  --serhf55: var(--_1q18b4kn);
}
html._1g896xf10 .serhf5f {
  --serhf50: var(--_1q18b4kx);
  --serhf51: var(--_1q18b4kq);
  --serhf52: var(--_1q18b4kv);
  --serhf53: var(--_1q18b4ki);
  --serhf54: var(--_1q18b4kk);
  --serhf55: var(--_1q18b4ko);
}
.serhf5g {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.serhf5h {
  width: var(--_1q18b4ke);
}
.serhf5i {
  width: var(--_1q18b4ka);
}
.gmerni0 {
  margin-bottom: -0.1em;
}
.gmerni2 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
.gmerni0 .gmerni2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  .gmerni4 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--gmerni3);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__1g896xf10,html.sprinkles_darkMode__1g896xf10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__k60cqs0 typography_lightModeTone_light__i0m83318 typography_darkModeTone_dark__i0m8331b">
+        <div class="reset_base__tzfceu0 sprinkles_paddingBottom_gutter_mobile__1g896xf8n sprinkles_paddingTop_gutter_mobile__1g896xf7j sprinkles_paddingLeft_gutter_mobile__1g896xfav sprinkles_paddingRight_gutter_mobile__1g896xf9r sprinkles_position_relative_mobile__1g896xf5f sprinkles_borderRadius_large_mobile__1g896xf67 sprinkles_textAlign_left_mobile__1g896xfi7 sprinkles_boxShadow_borderNeutralLight_lightMode__1g896xf4j sprinkles_boxShadow_borderNeutral_darkMode__1g896xf4c typography_lightModeTone_light__i0m83318 typography_darkModeTone_dark__i0m8331b sprinkles_background_surface_lightMode__1g896xf33 sprinkles_background_surfaceDark_darkMode__1g896xf36">
+          <span class="reset_base__tzfceu0 sprinkles_display_block_mobile__1g896xf4z typography_fontFamily__i0m8330 typography_fontWeight_regular__i0m8331 typography_tone_neutral__i0m83321 capsize_capsizeStyle__mowtpn4 typography_textSize_large__i0m833d">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
